# general

.github/: Data.yaml
python/: pyproject.toml
python/prime/: Makefile
python/prime/src/: primes.py
python/src/: primes.py
python/tests/: test_prime.py
