[tool.poetry]
name = "general-python"
version = "0.1.0"
description = ""
authors = ["Sree Appachi"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
ruff = "^0.0.253"
pytest = "^7.2.1"
coverage = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

